# endangered-privacy

./: LICENSE  README.md
burstshark/: Cargo.toml  README.md
burstshark/src/: capture.rs  main.rs
identification/: datasets.py  evaluate.py  models.py  requirements.txt
karl/: README.md  go.mod  go.sum  main.go
karl/pkg/app/: app.go  output.go  roundtripper.go
karl/pkg/config/: config.go
karl/pkg/geolocate/: geolocate.go
karl/pkg/model/: model.go
karl/pkg/service/: default.go  fingerprinter.go  justwatch.go  service.go  variantextractor.go
karl/pkg/service/amazon/: amazon.go
karl/pkg/service/max/: max.go
karl/pkg/service/svt/: svt.go
